--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@
   gap: 10px;
   position: absolute;
   left: 60%;
-  box-shadow: 0px 4px 33px 0px #33d8d8e3;
+  box-shadow: 0px 4px 33px 0px #33d8d8;
 }
 .happy-client {
   position: absolute;
@@ -150,4 +150,30 @@
   width: 80px;
   height: 80px;
   object-fit: contain;
+}
+.about-section{
+  margin-top: 140px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.about-support{
+  display: flex ;
+  align-items: start ;
+  gap: 20px;
+}
+.about-image{
+  width: 50%;
+}
+.about-des{
+  width: 40%;
+}
+.lets-talk-btn{
+  padding: 10px 30px;
+  background-color: #33d8d8;
+  border: none;
+  border-radius: 24px;
+  color: white;
+  box-shadow: 0px 4px 33px 0px #33d8d871;
+
 }
