--- a/style.css
+++ b/style.css
@@ -151,29 +151,91 @@
   height: 80px;
   object-fit: contain;
 }
-.about-section{
+
+/* about section  */
+.about-section {
   margin-top: 140px;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-.about-support{
-  display: flex ;
-  align-items: start ;
+.about-support {
+  display: flex;
+  align-items: start;
   gap: 20px;
 }
-.about-image{
+.about-image {
   width: 50%;
 }
-.about-des{
+.about-des {
   width: 40%;
 }
-.lets-talk-btn{
-  padding: 10px 30px;
+.lets-talk-btn {
+  padding: 10px 40px;
   background-color: #33d8d8;
   border: none;
-  border-radius: 24px;
+  border-radius: 40px;
   color: white;
   box-shadow: 0px 4px 33px 0px #33d8d871;
+  font-size: 22px;
+}
+.about-text {
+  font-weight: 400;
+  font-size: 22px;
+}
+.about-head {
+  font-weight: bold;
+}
+.years-count-about {
+  color: #33d8d8;
+}
+.about-des-para {
+  font-size: 20px;
+  color: rgb(78, 78, 78);
+}
 
+/* Marquee  */
+
+.marquee-section{
+  margin-top: 140px;
+  margin-bottom: 140px;
+}
+
+.marquee-container {
+  width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+  background: #00e6e6;
+  padding: 15px 0;
+  position: relative;
+}
+
+.marquee-wrapper {
+  display: flex;
+  width: max-content;
+  animation: marquee 10s linear infinite;
+}
+
+.marquee-content {
+  display: flex;
+  align-items: center;
+  gap: 50px;
+  font-size: 24px;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: white;
+}
+
+.marquee-content img {
+  width: 30px;
+  height: auto;
+}
+
+@keyframes marquee {
+  from {
+      transform: translateX(0);
+  }
+  to {
+      transform: translateX(-50%);
+  }
 }
